--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ configobj==4.7.2
 decorator==3.3.2
 ## FIXME: could not find svn URL in dependency_links for this package:
 distribute==0.6.24dev-r0
+django-cors-headers==0.12
 django-debug-toolbar==1.2.1
 django-extensions==1.3.7
 django-pushserver==0.3.4
